Maui Rendering (Windows only for now). LibVLCSharp.Maui project for VideoView and LibVLCSharp.Maui.Sample test project. (Requires updated global.json for current SDK)

--- a/samples/Direct3D11/LibVLCSharp.WinUI.Sample/MainWindow.xaml
+++ b/samples/Direct3D11/LibVLCSharp.WinUI.Sample/MainWindow.xaml
@@ -8,6 +8,6 @@
     mc:Ignorable="d">
 
     <Grid>
-        <winUi:VideoView x:Name="VideoView"></winUi:VideoView>
+        <winUi:VideoView x:Name="VideoView"/>
     </Grid>
 </Window>
